# Alice

./: .gitignore  Alice.pro  CMakeLists.txt  README.md  httprequest.cpp  httprequest.h  main.cpp  querycode.cpp  widget.cpp  widget.h  widget.ui
.github/workflows/: main.yml
Core/: Core.pri  feature.h  httprequest.cpp  httprequest.h  querycode.cpp  querycode.h  translation.h
Images/: logo.psd
Preference/: preference.h  preference.ui
src/: CMakeLists.txt  global_clipboard_message_for_mac.h  global_clipboard_message_for_mac.mm  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  widget.cpp  widget.h
src/Core/: Core.pri  httprequest.cpp  httprequest.h  translation.cpp
src/Main/: Alice.pro  Images.qrc  main.cpp  widget.cpp  widget.ui
src/Preference/: CMakeLists.txt  Preference.pri  preference.cpp  preference.h  preference.ui
src/translate_engine/: CMakeLists.txt  engine.cpp  engine.h  interface.cpp  interface.h
